hphp/test/quick/trailing_comma_bad4.php.expectf
HipHop Fatal error: syntax error, unexpected ',', expecting '&' or T_VARIABLE in %s on line 2
